--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "token-cookie-task-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "serve.js",
     "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
